# BIUAdvanedProg1-MS-2

./: AStar.h  BFS.h  BestFS.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.cpp  ClientHandler.h  DFS.h  Matrix.cpp  Matrix.h  MyPriorityQueue.h  README.md  SearchOnMatrixExperiment.cpp  SearchOnMatrixExperiment.h  Searchable.cpp  Searchable.h  Searcher.cpp  Searcher.h  Server.cpp  Server.h  Solver.cpp  Solver.h  State.cpp  State.h  StateValue.h  StateValueContainer.cpp  StateValueContainer.h  StringBuilder.cpp  StringBuilder.h  main.cpp
matrices/: Matrix10x10.txt  Matrix11x11.txt  Matrix12x12.txt  Matrix13x13.txt  Matrix14x14.txt  Matrix15x15.txt  Matrix16x16.txt  Matrix17x17.txt  Matrix18x18.txt  Matrix19x19.txt  Matrix2.txt  Matrix20x20.txt  Matrix21x21.txt  Matrix22x22.txt  Matrix23x23.txt  Matrix24x24.txt  Matrix25x25.txt  Matrix26x26.txt  Matrix27x27.txt  Matrix28x28.txt  Matrix29x29.txt  Matrix30x30.txt  Matrix31x31.txt  Matrix32x32.txt  Matrix33x33.txt  Matrix34x34.txt  Matrix35x35.txt  Matrix36x36.txt  Matrix37x37.txt  Matrix38x38.txt  Matrix39x39.txt  Matrix40x40.txt  Matrix41x41.txt  Matrix42x42.txt  Matrix43x43.txt  Matrix44x44.txt  Matrix45x45.txt  Matrix46x46.txt  Matrix47x47.txt  Matrix48x48.txt  (+9 more)
matricesexperiment/: Matrix10x10.txt  Matrix14x14.txt  Matrix18x18.txt  Matrix22x22.txt  Matrix26x26.txt  Matrix30x30.txt  Matrix34x34.txt  Matrix38x38.txt  Matrix42x42.txt  Matrix46x46.txt  Matrix50x50.txt
